--- a/assets/package.json
+++ b/assets/package.json
@@ -36,6 +36,7 @@
         "chart.js": "2.8.0",
         "datatables.net-bs4": "1.10.19",
         "jquery": "3.4.1",
+        "jquery-ui": "^1.12.1",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
