--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"php": ">=5.3.7",
 		"ismaeltoe/osms": "^2.0",
 		"nicmart/string-template": "^0.1.1",
-		"mustache/mustache": "^2.13"
+		"mustache/mustache": "^2.13",
+		"nuovo/spreadsheet-reader": "^0.5.11"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
