--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
 		"ismaeltoe/osms": "^2.0",
 		"nicmart/string-template": "^0.1.1",
 		"mustache/mustache": "^2.13",
-		"nuovo/spreadsheet-reader": "^0.5.11"
+		"nuovo/spreadsheet-reader": "^0.5.11",
+		"psr/simple-cache": "^1.0",
+		"phpoffice/phpspreadsheet": "^1.11",
+		"mpdf/mpdf": "^8.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
